tests statique